# invoice-intelligence-platform

./: .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  app.py  config.py  docker-compose.yml  fastapi_app.py  kubernetes.yaml  logger.py  pyproject.toml
freight_cost_prediction/: data_preprocessing.py  modeling_evaluation.py  train.py
inference/: predict_freight.py  predict_invoice_flag.py
invoice_flagging/: data_preprocessing.py  train.py
